// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ADMIN | Pages | API TOKENS | EditView renders and matches the snapshot when creating token 1`] = `
.c70 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c2 {
  background: #f6f6f9;
  padding-top: 24px;
  padding-right: 56px;
  padding-bottom: 40px;
  padding-left: 56px;
}

.c3 {
  padding-bottom: 8px;
}

.c5 {
  padding-right: 8px;
}

.c18 {
  padding-right: 56px;
  padding-left: 56px;
}

.c21 {
  background: #ffffff;
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c38 {
  padding-right: 16px;
  padding-left: 16px;
}

.c40 {
  padding-left: 12px;
}

.c44 {
  background: #ffffff;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c47 {
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
}

.c50 {
  background: #ffffff;
  padding: 16px;
}

.c69 {
  background: #eaeaef;
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
}

.c51 {
  border-radius: 4px;
}

.c53 {
  background: #f6f6f9;
  padding-top: 24px;
  padding-right: 24px;
  padding-bottom: 24px;
  padding-left: 24px;
}

.c55 {
  max-width: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c57 {
  min-width: 0px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c62 {
  background: #dcdce4;
  border-radius: 50%;
  cursor: pointer;
  width: 2rem;
  height: 2rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  cursor: pointer;
}

.c64 {
  color: #666687;
  width: 0.6875rem;
}

.c67 {
  background: #ffffff;
  padding-top: 24px;
  padding-right: 24px;
  padding-bottom: 24px;
  padding-left: 24px;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c19 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c63 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c8 {
  font-size: 0.875rem;
  line-height: 1.43;
  color: #4945ff;
}

.c12 {
  font-weight: 600;
  font-size: 2rem;
  line-height: 1.25;
  color: #32324d;
}

.c17 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  line-height: 1.14;
  color: #32324d;
}

.c23 {
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
  color: #32324d;
}

.c27 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  color: #32324d;
}

.c28 {
  font-size: 0.875rem;
  line-height: 1.43;
  color: #d02b20;
}

.c39 {
  font-size: 0.875rem;
  line-height: 1.43;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #666687;
}

.c43 {
  font-size: 0.75rem;
  line-height: 1.33;
  color: #666687;
}

.c49 {
  font-size: 0.875rem;
  line-height: 1.43;
  color: #666687;
}

.c60 {
  font-size: 0.75rem;
  line-height: 1.33;
  color: #4945ff;
}

.c61 {
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #4a4a6a;
}

.c20 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c20 > * + * {
  margin-top: 24px;
}

.c22 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c22 > * + * {
  margin-top: 16px;
}

.c26 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c26 > * + * {
  margin-top: 4px;
}

.c48 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c48 > * + * {
  margin-top: 8px;
}

.c13 > * {
  margin-left: 0;
  margin-right: 0;
}

.c13 > * + * {
  margin-left: 8px;
}

.c56 > * {
  margin-left: 0;
  margin-right: 0;
}

.c56 > * + * {
  margin-left: 12px;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  padding: 8px;
  border-radius: 4px;
  background: #ffffff;
  border: 1px solid #dcdce4;
  position: relative;
  outline: none;
}

.c14 svg {
  height: 12px;
  width: 12px;
}

.c14 svg > g,
.c14 svg path {
  fill: #ffffff;
}

.c14[aria-disabled='true'] {
  pointer-events: none;
}

.c14:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c14:focus-visible {
  outline: none;
}

.c14:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c16 {
  height: 100%;
}

.c15 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #4945ff;
  border: 1px solid #4945ff;
  height: 2rem;
  padding-left: 16px;
  padding-right: 16px;
}

.c15 .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c15 .c7 {
  color: #ffffff;
}

.c15[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c15[aria-disabled='true'] .c7 {
  color: #666687;
}

.c15[aria-disabled='true'] svg > g,
.c15[aria-disabled='true'] svg path {
  fill: #666687;
}

.c15[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c15[aria-disabled='true']:active .c7 {
  color: #666687;
}

.c15[aria-disabled='true']:active svg > g,
.c15[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c15:hover {
  border: 1px solid #7b79ff;
  background: #7b79ff;
}

.c15:active {
  border: 1px solid #4945ff;
  background: #4945ff;
}

.c15 svg > g,
.c15 svg path {
  fill: #ffffff;
}

.c29 {
  line-height: 0;
}

.c31 {
  border: none;
  border-radius: 4px;
  padding-bottom: 0.65625rem;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 0.65625rem;
  color: #32324d;
  font-weight: 400;
  font-size: 0.875rem;
  display: block;
  width: 100%;
  background: inherit;
}

.c31::-webkit-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c31::-moz-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c31:-ms-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c31::placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c31[aria-disabled='true'] {
  color: inherit;
}

.c31:focus {
  outline: none;
  box-shadow: none;
}

.c30 {
  border: 1px solid #dcdce4;
  border-radius: 4px;
  background: #ffffff;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c30:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c65 path {
  fill: #666687;
}

.c36 {
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  width: 100%;
  background: transparent;
  border: none;
}

.c36:focus {
  outline: none;
}

.c36[aria-disabled='true'] {
  cursor: not-allowed;
}

.c35 {
  position: relative;
  border: 1px solid #dcdce4;
  padding-right: 12px;
  border-radius: 4px;
  background: #ffffff;
  overflow: hidden;
  min-height: 2.5rem;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c35:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c41 {
  background: transparent;
  border: none;
  position: relative;
  z-index: 1;
}

.c41 svg {
  height: 0.6875rem;
  width: 0.6875rem;
}

.c41 svg path {
  fill: #666687;
}

.c42 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: none;
  border: none;
}

.c42 svg {
  width: 0.375rem;
}

.c37 {
  width: 100%;
}

.c33 {
  border: 1px solid #dcdce4;
  border-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 12px;
  padding-bottom: 12px;
  background: #ffffff;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c33:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c34 {
  display: block;
  width: 100%;
  font-weight: 400;
  font-size: 0.875rem;
  border: none;
  color: #32324d;
  resize: none;
  background: inherit;
}

.c34::-webkit-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c34::-moz-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c34:-ms-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c34::placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c34:focus-within {
  outline: none;
}

.c32 textarea {
  height: 5rem;
  line-height: 1.25rem;
}

.c32 textarea::-webkit-input-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c32 textarea::-moz-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c32 textarea:-ms-input-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c32 textarea::placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c58 {
  background: transparent;
  border: none;
  position: relative;
  outline: none;
}

.c58[aria-disabled='true'] {
  pointer-events: none;
}

.c58[aria-disabled='true'] svg path {
  fill: #666687;
}

.c58 svg {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.625rem;
}

.c58 svg path {
  fill: #4945ff;
}

.c58:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c58:focus-visible {
  outline: none;
}

.c58:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  outline: none;
}

.c4 svg path {
  fill: #4945ff;
}

.c4 svg {
  font-size: 0.625rem;
}

.c4:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c4:focus-visible {
  outline: none;
}

.c4:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0:focus-visible {
  outline: none;
}

.c24 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
  gap: 20px;
}

.c45 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
  gap: 0px;
}

.c25 {
  grid-column: span 6;
  max-width: 100%;
}

.c46 {
  grid-column: span 7;
  max-width: 100%;
}

.c68 {
  grid-column: span 5;
  max-width: 100%;
}

.c52 {
  border: 1px solid #f6f6f9;
}

.c52:hover:not([aria-disabled='true']) {
  border: 1px solid #4945ff;
}

.c52:hover:not([aria-disabled='true']) .sc-gwNDlS {
  color: #271fe0;
}

.c52:hover:not([aria-disabled='true']) .c7 {
  color: #4945ff;
}

.c52:hover:not([aria-disabled='true']) > .c9 {
  background: #f0f0ff;
}

.c52:hover:not([aria-disabled='true']) [data-strapi-dropdown='true'] {
  background: #d9d8ff;
}

.c66 {
  border: 1px solid #ffffff;
}

.c66:hover:not([aria-disabled='true']) {
  border: 1px solid #4945ff;
}

.c66:hover:not([aria-disabled='true']) .sc-gwNDlS {
  color: #271fe0;
}

.c66:hover:not([aria-disabled='true']) .c7 {
  color: #4945ff;
}

.c66:hover:not([aria-disabled='true']) > .c9 {
  background: #f0f0ff;
}

.c66:hover:not([aria-disabled='true']) [data-strapi-dropdown='true'] {
  background: #d9d8ff;
}

.c59 {
  text-align: left;
}

.c59 > span {
  max-width: 100%;
}

.c59 svg {
  width: 0.875rem;
  height: 0.875rem;
}

.c59 svg path {
  fill: #8e8ea9;
}

.c54 {
  min-height: 5.5rem;
  border-radius: 4px;
}

.c54:hover svg path {
  fill: #4945ff;
}

@media (max-width:68.75rem) {
  .c25 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c25 {
    grid-column: span 12;
  }
}

@media (max-width:68.75rem) {
  .c46 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c46 {
    grid-column: span;
  }
}

@media (max-width:68.75rem) {
  .c68 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c68 {
    grid-column: span;
  }
}

<div>
  <main
    aria-labelledby="main-content-title"
    class="c0"
    id="main-content"
    tabindex="-1"
  >
    <form
      action="#"
      novalidate=""
    >
      <div
        style="height: 0px;"
      >
        <div
          class="c1 c2"
          data-strapi-header="true"
        >
          <div
            class="c1 c3"
          >
            <a
              aria-current="page"
              class="c4 active"
              href="/settings/api-tokens"
            >
              <span
                aria-hidden="true"
                class="c1 c5 c6"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24 13.3a.2.2 0 01-.2.2H5.74l8.239 8.239a.2.2 0 010 .282L12.14 23.86a.2.2 0 01-.282 0L.14 12.14a.2.2 0 010-.282L11.86.14a.2.2 0 01.282 0L13.98 1.98a.2.2 0 010 .282L5.74 10.5H23.8c.11 0 .2.09.2.2v2.6z"
                    fill="#212134"
                  />
                </svg>
              </span>
              <span
                class="c7 c8"
              >
                Back
              </span>
            </a>
          </div>
          <div
            class="c1 c9 c10"
          >
            <div
              class="c1 c9 c11"
            >
              <h1
                class="c7 c12"
              >
                Create API Token
              </h1>
            </div>
            <div
              class="c1 c9 c11 c13"
              spacing="2"
            >
              <button
                aria-disabled="false"
                class="c14 c15"
                type="submit"
              >
                <div
                  aria-hidden="true"
                  class="c1 c5 c16"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20.727 2.97a.2.2 0 01.286 0l2.85 2.89a.2.2 0 010 .28L9.554 20.854a.2.2 0 01-.285 0l-9.13-9.243a.2.2 0 010-.281l2.85-2.892a.2.2 0 01.284 0l6.14 6.209L20.726 2.97z"
                      fill="#212134"
                    />
                  </svg>
                </div>
                <span
                  class="c7 c17"
                >
                  Save
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c1 c18"
      >
        <div
          class="c1 c9 c19 c20"
          spacing="6"
        >
          <div
            class="c1 c21"
          >
            <div
              class="c1 c9 c19 c22"
              spacing="4"
            >
              <h2
                class="c7 c23"
              >
                Details
              </h2>
              <div
                class="c1 c24"
              >
                <div
                  class="c25"
                >
                  <div
                    class="c1 "
                  >
                    <div>
                      <div>
                        <div
                          class="c1 c9 c19 c26"
                          spacing="1"
                        >
                          <label
                            class="c7 c27"
                            for="textinput-1"
                            required=""
                          >
                            <div
                              class="c1 c9 c11"
                            >
                              Name
                              <span
                                class="c7 c28 c29"
                              >
                                *
                              </span>
                            </div>
                          </label>
                          <div
                            class="c1 c9 c10 c30"
                          >
                            <input
                              aria-disabled="false"
                              aria-invalid="false"
                              class="c31"
                              id="textinput-1"
                              name="name"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c25"
                >
                  <div
                    class="c1 "
                  >
                    <div
                      class="c32"
                    >
                      <div>
                        <div
                          class="c1 c9 c19 c26"
                          spacing="1"
                        >
                          <div
                            class="c1 c9 c11"
                          >
                            <label
                              class="c7 c27"
                              for="textarea-2"
                            >
                              <div
                                class="c1 c9 c11"
                              >
                                Description
                              </div>
                            </label>
                          </div>
                          <div
                            class="c33"
                          >
                            <textarea
                              aria-invalid="false"
                              class="c34"
                              id="textarea-2"
                              name="description"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c25"
                >
                  <div
                    class="c1 "
                  >
                    <div>
                      <div
                        class="c1 c9 c19 c26"
                        spacing="1"
                      >
                        <span
                          class="c7 c27"
                          for="select-3"
                          id="select-3-label"
                          required=""
                        >
                          <div
                            class="c1 c9 c11"
                          >
                            Token duration
                            <span
                              class="c7 c28 c29"
                            >
                              *
                            </span>
                          </div>
                        </span>
                        <div
                          class="c1 c9 c11 c35"
                        >
                          <button
                            aria-disabled="false"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-labelledby="select-3-label select-3-content"
                            class="c36"
                            id="select-3"
                            name="lifespan"
                            type="button"
                          />
                          <div
                            class="c1 c9 c10 c37"
                          >
                            <div
                              class="c1 c9 c11"
                            >
                              <div
                                class="c1 c38"
                              >
                                <span
                                  class="c7 c39"
                                  id="select-3-content"
                                >
                                  Select
                                </span>
                              </div>
                            </div>
                            <div
                              class="c1 c9 c11"
                            >
                              <button
                                aria-hidden="true"
                                class="c1 c40 c41 c42"
                                tabindex="-1"
                                type="button"
                              >
                                <svg
                                  fill="none"
                                  height="1em"
                                  viewBox="0 0 14 8"
                                  width="1em"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                    fill="#32324D"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <span
                      class="c7 c43"
                    />
                  </div>
                </div>
                <div
                  class="c25"
                >
                  <div
                    class="c1 "
                  >
                    <div>
                      <div
                        class="c1 c9 c19 c26"
                        spacing="1"
                      >
                        <span
                          class="c7 c27"
                          for="select-4"
                          id="select-4-label"
                          required=""
                        >
                          <div
                            class="c1 c9 c11"
                          >
                            Token type
                            <span
                              class="c7 c28 c29"
                            >
                              *
                            </span>
                          </div>
                        </span>
                        <div
                          class="c1 c9 c11 c35"
                        >
                          <button
                            aria-disabled="false"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-labelledby="select-4-label select-4-content"
                            class="c36"
                            id="select-4"
                            name="type"
                            type="button"
                          />
                          <div
                            class="c1 c9 c10 c37"
                          >
                            <div
                              class="c1 c9 c11"
                            >
                              <div
                                class="c1 c38"
                              >
                                <span
                                  class="c7 c39"
                                  id="select-4-content"
                                >
                                  Select
                                </span>
                              </div>
                            </div>
                            <div
                              class="c1 c9 c11"
                            >
                              <button
                                aria-hidden="true"
                                class="c1 c40 c41 c42"
                                tabindex="-1"
                                type="button"
                              >
                                <svg
                                  fill="none"
                                  height="1em"
                                  viewBox="0 0 14 8"
                                  width="1em"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                    fill="#32324D"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c1 c44 c45"
          >
            <div
              class="c46"
            >
              <div
                class="c1 c47"
              >
                <div
                  class="c1 c9 c19 c48"
                  spacing="2"
                >
                  <h2
                    class="c7 c23"
                  >
                    Permissions
                  </h2>
                  <p
                    class="c7 c49"
                  >
                    Only actions bound by a route are listed below.
                  </p>
                </div>
                <div
                  class="c1 c50"
                >
                  <div
                    aria-disabled="false"
                    class="c1 c51 c52"
                    data-strapi-expanded="false"
                  >
                    <div
                      class="c1 c9 c53 c10 c54"
                      cursor=""
                    >
                      <div
                        class="c1 c9 c55 c11 c56"
                        spacing="3"
                      >
                        <button
                          aria-controls="accordion-content-accordion-13"
                          aria-disabled="false"
                          aria-expanded="false"
                          aria-labelledby="accordion-label-accordion-13"
                          class="c1 c9 c57 c11 c58 c59"
                          data-strapi-accordion-toggle="true"
                          type="button"
                        >
                          <span
                            class="c7 c60"
                          >
                            <span
                              class="c7 sc-gwNDlS c61"
                              id="accordion-label-accordion-13"
                            >
                              Address
                            </span>
                          </span>
                        </button>
                        <div
                          class="c1 c9 c11 c56"
                          spacing="3"
                        >
                          <span
                            aria-hidden="true"
                            class="c1 c9 c62 c63"
                            cursor="pointer"
                            data-strapi-dropdown="true"
                            height="2rem"
                            width="2rem"
                          >
                            <svg
                              class="c1 c64 c65"
                              fill="none"
                              height="1em"
                              viewBox="0 0 14 8"
                              width="0.6875rem"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                fill="#32324D"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    aria-disabled="false"
                    class="c1 c51 c66"
                    data-strapi-expanded="false"
                  >
                    <div
                      class="c1 c9 c67 c10 c54"
                      cursor=""
                    >
                      <div
                        class="c1 c9 c55 c11 c56"
                        spacing="3"
                      >
                        <button
                          aria-controls="accordion-content-accordion-14"
                          aria-disabled="false"
                          aria-expanded="false"
                          aria-labelledby="accordion-label-accordion-14"
                          class="c1 c9 c57 c11 c58 c59"
                          data-strapi-accordion-toggle="true"
                          type="button"
                        >
                          <span
                            class="c7 c60"
                          >
                            <span
                              class="c7 sc-gwNDlS c61"
                              id="accordion-label-accordion-14"
                            >
                              Category
                            </span>
                          </span>
                        </button>
                        <div
                          class="c1 c9 c11 c56"
                          spacing="3"
                        >
                          <span
                            aria-hidden="true"
                            class="c1 c9 c62 c63"
                            cursor="pointer"
                            data-strapi-dropdown="true"
                            height="2rem"
                            width="2rem"
                          >
                            <svg
                              class="c1 c64 c65"
                              fill="none"
                              height="1em"
                              viewBox="0 0 14 8"
                              width="0.6875rem"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                fill="#32324D"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c68"
            >
              <div
                class="c1 c69"
                style="min-height: 100%;"
              >
                <div
                  class="c1 c9 c19 c48"
                  spacing="2"
                >
                  <h3
                    class="c7 c23"
                  >
                    Advanced settings
                  </h3>
                  <p
                    class="c7 c49"
                  >
                    Select the application's actions or the plugin's actions and click on the cog icon to display the bound route
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </main>
  <div
    class="c70"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </div>
</div>
`;

exports[`ADMIN | Pages | API TOKENS | EditView renders and matches the snapshot when editing existing token 1`] = `
.c79 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c5 {
  padding-right: 8px;
}

.c19 {
  padding-right: 56px;
  padding-left: 56px;
}

.c2 {
  background: #f6f6f9;
  padding-top: 24px;
  padding-right: 56px;
  padding-bottom: 40px;
  padding-left: 56px;
}

.c3 {
  padding-bottom: 8px;
}

.c22 {
  background: #ffffff;
  padding: 24px;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c23 {
  background: #f6f6f9;
  padding: 12px;
  border-radius: 4px;
}

.c29 {
  background: #ffffff;
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c45 {
  padding-right: 16px;
  padding-left: 16px;
}

.c47 {
  padding-left: 12px;
}

.c54 {
  background: #ffffff;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c57 {
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
}

.c59 {
  background: #ffffff;
  padding: 16px;
}

.c78 {
  background: #eaeaef;
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
}

.c60 {
  border-radius: 4px;
}

.c62 {
  background: #f6f6f9;
  padding-top: 24px;
  padding-right: 24px;
  padding-bottom: 24px;
  padding-left: 24px;
}

.c64 {
  max-width: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c66 {
  min-width: 0px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c71 {
  background: #dcdce4;
  border-radius: 50%;
  cursor: pointer;
  width: 2rem;
  height: 2rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  cursor: pointer;
}

.c73 {
  color: #666687;
  width: 0.6875rem;
}

.c76 {
  background: #ffffff;
  padding-top: 24px;
  padding-right: 24px;
  padding-bottom: 24px;
  padding-left: 24px;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c20 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c72 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c12 {
  font-weight: 600;
  font-size: 2rem;
  line-height: 1.25;
  color: #32324d;
}

.c8 {
  font-size: 0.875rem;
  line-height: 1.43;
  color: #4945ff;
}

.c17 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  line-height: 1.14;
  color: #32324d;
}

.c26 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 500;
  color: #32324d;
}

.c28 {
  font-size: 0.875rem;
  line-height: 1.43;
  color: #666687;
}

.c31 {
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
  color: #32324d;
}

.c34 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  color: #32324d;
}

.c35 {
  font-size: 0.875rem;
  line-height: 1.43;
  color: #d02b20;
}

.c46 {
  font-size: 0.875rem;
  line-height: 1.43;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #666687;
}

.c50 {
  font-size: 0.75rem;
  line-height: 1.33;
  color: #666687;
}

.c52 {
  font-size: 0.875rem;
  line-height: 1.43;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #32324d;
}

.c69 {
  font-size: 0.75rem;
  line-height: 1.33;
  color: #4945ff;
}

.c70 {
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #4a4a6a;
}

.c21 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c21 > * + * {
  margin-top: 24px;
}

.c25 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c25 > * + * {
  margin-top: 4px;
}

.c30 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c30 > * + * {
  margin-top: 16px;
}

.c58 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c58 > * + * {
  margin-top: 8px;
}

.c13 > * {
  margin-left: 0;
  margin-right: 0;
}

.c13 > * + * {
  margin-left: 8px;
}

.c65 > * {
  margin-left: 0;
  margin-right: 0;
}

.c65 > * + * {
  margin-left: 12px;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  padding: 8px;
  border-radius: 4px;
  background: #ffffff;
  border: 1px solid #dcdce4;
  position: relative;
  outline: none;
}

.c14 svg {
  height: 12px;
  width: 12px;
}

.c14 svg > g,
.c14 svg path {
  fill: #ffffff;
}

.c14[aria-disabled='true'] {
  pointer-events: none;
}

.c14:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c14:focus-visible {
  outline: none;
}

.c14:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c16 {
  height: 100%;
}

.c80 .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c80 .c7 {
  color: #ffffff;
}

.c80[aria-disabled='true'] .c7 {
  color: #666687;
}

.c80[aria-disabled='true']:active .c7 {
  color: #666687;
}

.c15 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #4945ff;
  border: 1px solid #4945ff;
  height: 2rem;
  padding-left: 16px;
  padding-right: 16px;
  border: 1px solid #dcdce4;
  background: #ffffff;
}

.c15 .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c15 .c7 {
  color: #ffffff;
}

.c15[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c15[aria-disabled='true'] .c7 {
  color: #666687;
}

.c15[aria-disabled='true'] svg > g,
.c15[aria-disabled='true'] svg path {
  fill: #666687;
}

.c15[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c15[aria-disabled='true']:active .c7 {
  color: #666687;
}

.c15[aria-disabled='true']:active svg > g,
.c15[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c15:hover {
  background-color: #f6f6f9;
}

.c15:active {
  background-color: #eaeaef;
}

.c15 .c7 {
  color: #32324d;
}

.c15 svg > g,
.c15 svg path {
  fill: #32324d;
}

.c18 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #4945ff;
  border: 1px solid #4945ff;
  height: 2rem;
  padding-left: 16px;
  padding-right: 16px;
}

.c18 .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c18 .c7 {
  color: #ffffff;
}

.c18[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c18[aria-disabled='true'] .c7 {
  color: #666687;
}

.c18[aria-disabled='true'] svg > g,
.c18[aria-disabled='true'] svg path {
  fill: #666687;
}

.c18[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c18[aria-disabled='true']:active .c7 {
  color: #666687;
}

.c18[aria-disabled='true']:active svg > g,
.c18[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c18:hover {
  border: 1px solid #7b79ff;
  background: #7b79ff;
}

.c18:active {
  border: 1px solid #4945ff;
  background: #4945ff;
}

.c18 svg > g,
.c18 svg path {
  fill: #ffffff;
}

.c36 {
  line-height: 0;
}

.c38 {
  border: none;
  border-radius: 4px;
  padding-bottom: 0.65625rem;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 0.65625rem;
  color: #32324d;
  font-weight: 400;
  font-size: 0.875rem;
  display: block;
  width: 100%;
  background: inherit;
}

.c38::-webkit-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c38::-moz-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c38:-ms-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c38::placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c38[aria-disabled='true'] {
  color: inherit;
}

.c38:focus {
  outline: none;
  box-shadow: none;
}

.c37 {
  border: 1px solid #dcdce4;
  border-radius: 4px;
  background: #ffffff;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c37:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c74 path {
  fill: #666687;
}

.c43 {
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  width: 100%;
  background: transparent;
  border: none;
}

.c43:focus {
  outline: none;
}

.c43[aria-disabled='true'] {
  cursor: not-allowed;
}

.c42 {
  position: relative;
  border: 1px solid #dcdce4;
  padding-right: 12px;
  border-radius: 4px;
  background: #ffffff;
  overflow: hidden;
  min-height: 2.5rem;
  color: #666687;
  background: #eaeaef;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c42:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c51 {
  position: relative;
  border: 1px solid #dcdce4;
  padding-right: 12px;
  border-radius: 4px;
  background: #ffffff;
  overflow: hidden;
  min-height: 2.5rem;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c51:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c48 {
  background: transparent;
  border: none;
  position: relative;
  z-index: 1;
}

.c48 svg {
  height: 0.6875rem;
  width: 0.6875rem;
}

.c48 svg path {
  fill: #666687;
}

.c49 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: none;
  border: none;
  cursor: not-allowed;
}

.c49 svg {
  width: 0.375rem;
}

.c53 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: none;
  border: none;
}

.c53 svg {
  width: 0.375rem;
}

.c44 {
  width: 100%;
}

.c40 {
  border: 1px solid #dcdce4;
  border-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 12px;
  padding-bottom: 12px;
  background: #ffffff;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c40:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c41 {
  display: block;
  width: 100%;
  font-weight: 400;
  font-size: 0.875rem;
  border: none;
  color: #32324d;
  resize: none;
  background: inherit;
}

.c41::-webkit-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c41::-moz-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c41:-ms-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c41::placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c41:focus-within {
  outline: none;
}

.c39 textarea {
  height: 5rem;
  line-height: 1.25rem;
}

.c39 textarea::-webkit-input-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c39 textarea::-moz-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c39 textarea:-ms-input-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c39 textarea::placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c67 {
  background: transparent;
  border: none;
  position: relative;
  outline: none;
}

.c67[aria-disabled='true'] {
  pointer-events: none;
}

.c67[aria-disabled='true'] svg path {
  fill: #666687;
}

.c67 svg {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.625rem;
}

.c67 svg path {
  fill: #4945ff;
}

.c67:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c67:focus-visible {
  outline: none;
}

.c67:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  outline: none;
}

.c4 svg path {
  fill: #4945ff;
}

.c4 svg {
  font-size: 0.625rem;
}

.c4:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c4:focus-visible {
  outline: none;
}

.c4:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c24 {
  margin-right: 24px;
}

.c24 svg {
  width: 2rem;
  height: 2rem;
}

.c27 {
  word-break: break-all;
}

.c0:focus-visible {
  outline: none;
}

.c32 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
  gap: 20px;
}

.c55 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
  gap: 0px;
}

.c33 {
  grid-column: span 6;
  max-width: 100%;
}

.c56 {
  grid-column: span 7;
  max-width: 100%;
}

.c77 {
  grid-column: span 5;
  max-width: 100%;
}

.c61 {
  border: 1px solid #f6f6f9;
}

.c61:hover:not([aria-disabled='true']) {
  border: 1px solid #4945ff;
}

.c61:hover:not([aria-disabled='true']) .sc-gwNDlS {
  color: #271fe0;
}

.c61:hover:not([aria-disabled='true']) .c7 {
  color: #4945ff;
}

.c61:hover:not([aria-disabled='true']) > .c9 {
  background: #f0f0ff;
}

.c61:hover:not([aria-disabled='true']) [data-strapi-dropdown='true'] {
  background: #d9d8ff;
}

.c75 {
  border: 1px solid #ffffff;
}

.c75:hover:not([aria-disabled='true']) {
  border: 1px solid #4945ff;
}

.c75:hover:not([aria-disabled='true']) .sc-gwNDlS {
  color: #271fe0;
}

.c75:hover:not([aria-disabled='true']) .c7 {
  color: #4945ff;
}

.c75:hover:not([aria-disabled='true']) > .c9 {
  background: #f0f0ff;
}

.c75:hover:not([aria-disabled='true']) [data-strapi-dropdown='true'] {
  background: #d9d8ff;
}

.c68 {
  text-align: left;
}

.c68 > span {
  max-width: 100%;
}

.c68 svg {
  width: 0.875rem;
  height: 0.875rem;
}

.c68 svg path {
  fill: #8e8ea9;
}

.c63 {
  min-height: 5.5rem;
  border-radius: 4px;
}

.c63:hover svg path {
  fill: #4945ff;
}

@media (max-width:68.75rem) {
  .c33 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c33 {
    grid-column: span 12;
  }
}

@media (max-width:68.75rem) {
  .c56 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c56 {
    grid-column: span;
  }
}

@media (max-width:68.75rem) {
  .c77 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c77 {
    grid-column: span;
  }
}

<div>
  <main
    aria-labelledby="main-content-title"
    class="c0"
    id="main-content"
    tabindex="-1"
  >
    <form
      action="#"
      novalidate=""
    >
      <div
        style="height: 0px;"
      >
        <div
          class="c1 c2"
          data-strapi-header="true"
        >
          <div
            class="c1 c3"
          >
            <a
              aria-current="page"
              class="c4 active"
              href="/settings/api-tokens"
            >
              <span
                aria-hidden="true"
                class="c1 c5 c6"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24 13.3a.2.2 0 01-.2.2H5.74l8.239 8.239a.2.2 0 010 .282L12.14 23.86a.2.2 0 01-.282 0L.14 12.14a.2.2 0 010-.282L11.86.14a.2.2 0 01.282 0L13.98 1.98a.2.2 0 010 .282L5.74 10.5H23.8c.11 0 .2.09.2.2v2.6z"
                    fill="#212134"
                  />
                </svg>
              </span>
              <span
                class="c7 c8"
              >
                Back
              </span>
            </a>
          </div>
          <div
            class="c1 c9 c10"
          >
            <div
              class="c1 c9 c11"
            >
              <h1
                class="c7 c12"
              >
                My super token
              </h1>
            </div>
            <div
              class="c1 c9 c11 c13"
              spacing="2"
            >
              <button
                aria-disabled="false"
                class="c14 c15"
                name="regenerate"
                type="button"
              >
                <div
                  aria-hidden="true"
                  class="c1 c5 c16"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M15.681 2.804A9.64 9.64 0 0011.818 2C6.398 2 2 6.48 2 12c0 5.521 4.397 10 9.818 10 2.03 0 4.011-.641 5.67-1.835a9.987 9.987 0 003.589-4.831 1.117 1.117 0 00-.664-1.418 1.086 1.086 0 00-1.393.676 7.769 7.769 0 01-2.792 3.758 7.546 7.546 0 01-4.41 1.428V4.222h.002a7.492 7.492 0 013.003.625 7.61 7.61 0 012.5 1.762l.464.551-2.986 3.042a.186.186 0 00.129.316H22V3.317a.188.188 0 00-.112-.172.179.179 0 00-.199.04l-2.355 2.4-.394-.468-.02-.02a9.791 9.791 0 00-3.239-2.293zm-3.863 1.418V2v2.222zm0 0v15.556c-4.216 0-7.636-3.484-7.636-7.778s3.42-7.777 7.636-7.778z"
                      fill="#212134"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
                <span
                  class="c7 c17"
                >
                  Regenerate
                </span>
              </button>
              <button
                aria-disabled="false"
                class="c14 c18"
                type="submit"
              >
                <div
                  aria-hidden="true"
                  class="c1 c5 c16"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20.727 2.97a.2.2 0 01.286 0l2.85 2.89a.2.2 0 010 .28L9.554 20.854a.2.2 0 01-.285 0l-9.13-9.243a.2.2 0 010-.281l2.85-2.892a.2.2 0 01.284 0l6.14 6.209L20.726 2.97z"
                      fill="#212134"
                    />
                  </svg>
                </div>
                <span
                  class="c7 c17"
                >
                  Save
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c1 c19"
      >
        <div
          class="c1 c9 c20 c21"
          spacing="6"
        >
          <div
            class="c1 c9 c22 c11"
          >
            <div
              class="c1 c9 c23 c11 c24"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17 14h-4.34a6 6 0 110-4H23v4h-2v4h-4v-4zM7 14a2 2 0 100-4 2 2 0 000 4z"
                  fill="#8E8EA9"
                />
              </svg>
            </div>
            <div
              class="c1 c9 c20 c25"
              spacing="1"
            >
              <div
                class="c1 c9 c11"
              >
                <span
                  class="c7 c26 c27"
                >
                  This token isn’t accessible anymore.
                </span>
              </div>
              <span
                class="c7 c28"
              >
                For security reasons, you can only see your token once.
              </span>
            </div>
          </div>
          <div
            class="c1 c29"
          >
            <div
              class="c1 c9 c20 c30"
              spacing="4"
            >
              <h2
                class="c7 c31"
              >
                Details
              </h2>
              <div
                class="c1 c32"
              >
                <div
                  class="c33"
                >
                  <div
                    class="c1 "
                  >
                    <div>
                      <div>
                        <div
                          class="c1 c9 c20 c25"
                          spacing="1"
                        >
                          <label
                            class="c7 c34"
                            for="textinput-28"
                            required=""
                          >
                            <div
                              class="c1 c9 c11"
                            >
                              Name
                              <span
                                class="c7 c35 c36"
                              >
                                *
                              </span>
                            </div>
                          </label>
                          <div
                            class="c1 c9 c10 c37"
                          >
                            <input
                              aria-disabled="false"
                              aria-invalid="false"
                              class="c38"
                              id="textinput-28"
                              name="name"
                              value="My super token"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c33"
                >
                  <div
                    class="c1 "
                  >
                    <div
                      class="c39"
                    >
                      <div>
                        <div
                          class="c1 c9 c20 c25"
                          spacing="1"
                        >
                          <div
                            class="c1 c9 c11"
                          >
                            <label
                              class="c7 c34"
                              for="textarea-29"
                            >
                              <div
                                class="c1 c9 c11"
                              >
                                Description
                              </div>
                            </label>
                          </div>
                          <div
                            class="c40"
                          >
                            <textarea
                              aria-invalid="false"
                              class="c41"
                              id="textarea-29"
                              name="description"
                            >
                              This describe my super token
                            </textarea>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c33"
                >
                  <div
                    class="c1 "
                  >
                    <div>
                      <div
                        class="c1 c9 c20 c25"
                        spacing="1"
                      >
                        <span
                          class="c7 c34"
                          for="select-30"
                          id="select-30-label"
                          required=""
                        >
                          <div
                            class="c1 c9 c11"
                          >
                            Token duration
                            <span
                              class="c7 c35 c36"
                            >
                              *
                            </span>
                          </div>
                        </span>
                        <div
                          class="c1 c9 c11 c42"
                          disabled=""
                        >
                          <button
                            aria-disabled="true"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-labelledby="select-30-label select-30-content"
                            class="c43"
                            id="select-30"
                            name="lifespan"
                            type="button"
                          />
                          <div
                            class="c1 c9 c10 c44"
                          >
                            <div
                              class="c1 c9 c11"
                            >
                              <div
                                class="c1 c45"
                              >
                                <span
                                  class="c7 c46"
                                  id="select-30-content"
                                >
                                  Select
                                </span>
                              </div>
                            </div>
                            <div
                              class="c1 c9 c11"
                            >
                              <button
                                aria-hidden="true"
                                class="c1 c47 c48 c49"
                                disabled=""
                                tabindex="-1"
                                type="button"
                              >
                                <svg
                                  fill="none"
                                  height="1em"
                                  viewBox="0 0 14 8"
                                  width="1em"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                    fill="#32324D"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <span
                      class="c7 c50"
                    >
                      Expiration date: Unlimited
                    </span>
                  </div>
                </div>
                <div
                  class="c33"
                >
                  <div
                    class="c1 "
                  >
                    <div>
                      <div
                        class="c1 c9 c20 c25"
                        spacing="1"
                      >
                        <span
                          class="c7 c34"
                          for="select-31"
                          id="select-31-label"
                          required=""
                        >
                          <div
                            class="c1 c9 c11"
                          >
                            Token type
                            <span
                              class="c7 c35 c36"
                            >
                              *
                            </span>
                          </div>
                        </span>
                        <div
                          class="c1 c9 c11 c51"
                        >
                          <button
                            aria-disabled="false"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-labelledby="select-31-label select-31-content"
                            class="c43"
                            id="select-31"
                            name="type"
                            type="button"
                          />
                          <div
                            class="c1 c9 c10 c44"
                          >
                            <div
                              class="c1 c9 c11"
                            >
                              <div
                                class="c1 c45"
                              >
                                <span
                                  class="c7 c52"
                                  id="select-31-content"
                                >
                                  Read-only
                                </span>
                              </div>
                            </div>
                            <div
                              class="c1 c9 c11"
                            >
                              <button
                                aria-hidden="true"
                                class="c1 c47 c48 c53"
                                tabindex="-1"
                                type="button"
                              >
                                <svg
                                  fill="none"
                                  height="1em"
                                  viewBox="0 0 14 8"
                                  width="1em"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                    fill="#32324D"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c1 c54 c55"
          >
            <div
              class="c56"
            >
              <div
                class="c1 c57"
              >
                <div
                  class="c1 c9 c20 c58"
                  spacing="2"
                >
                  <h2
                    class="c7 c31"
                  >
                    Permissions
                  </h2>
                  <p
                    class="c7 c28"
                  >
                    Only actions bound by a route are listed below.
                  </p>
                </div>
                <div
                  class="c1 c59"
                >
                  <div
                    aria-disabled="false"
                    class="c1 c60 c61"
                    data-strapi-expanded="false"
                  >
                    <div
                      class="c1 c9 c62 c10 c63"
                      cursor=""
                    >
                      <div
                        class="c1 c9 c64 c11 c65"
                        spacing="3"
                      >
                        <button
                          aria-controls="accordion-content-accordion-42"
                          aria-disabled="false"
                          aria-expanded="false"
                          aria-labelledby="accordion-label-accordion-42"
                          class="c1 c9 c66 c11 c67 c68"
                          data-strapi-accordion-toggle="true"
                          type="button"
                        >
                          <span
                            class="c7 c69"
                          >
                            <span
                              class="c7 sc-gwNDlS c70"
                              id="accordion-label-accordion-42"
                            >
                              Address
                            </span>
                          </span>
                        </button>
                        <div
                          class="c1 c9 c11 c65"
                          spacing="3"
                        >
                          <span
                            aria-hidden="true"
                            class="c1 c9 c71 c72"
                            cursor="pointer"
                            data-strapi-dropdown="true"
                            height="2rem"
                            width="2rem"
                          >
                            <svg
                              class="c1 c73 c74"
                              fill="none"
                              height="1em"
                              viewBox="0 0 14 8"
                              width="0.6875rem"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                fill="#32324D"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    aria-disabled="false"
                    class="c1 c60 c75"
                    data-strapi-expanded="false"
                  >
                    <div
                      class="c1 c9 c76 c10 c63"
                      cursor=""
                    >
                      <div
                        class="c1 c9 c64 c11 c65"
                        spacing="3"
                      >
                        <button
                          aria-controls="accordion-content-accordion-43"
                          aria-disabled="false"
                          aria-expanded="false"
                          aria-labelledby="accordion-label-accordion-43"
                          class="c1 c9 c66 c11 c67 c68"
                          data-strapi-accordion-toggle="true"
                          type="button"
                        >
                          <span
                            class="c7 c69"
                          >
                            <span
                              class="c7 sc-gwNDlS c70"
                              id="accordion-label-accordion-43"
                            >
                              Category
                            </span>
                          </span>
                        </button>
                        <div
                          class="c1 c9 c11 c65"
                          spacing="3"
                        >
                          <span
                            aria-hidden="true"
                            class="c1 c9 c71 c72"
                            cursor="pointer"
                            data-strapi-dropdown="true"
                            height="2rem"
                            width="2rem"
                          >
                            <svg
                              class="c1 c73 c74"
                              fill="none"
                              height="1em"
                              viewBox="0 0 14 8"
                              width="0.6875rem"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                fill="#32324D"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c77"
            >
              <div
                class="c1 c78"
                style="min-height: 100%;"
              >
                <div
                  class="c1 c9 c20 c58"
                  spacing="2"
                >
                  <h3
                    class="c7 c31"
                  >
                    Advanced settings
                  </h3>
                  <p
                    class="c7 c28"
                  >
                    Select the application's actions or the plugin's actions and click on the cog icon to display the bound route
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </main>
  <div
    class="c79"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </div>
</div>
`;
